# Sequence-alignment-

./: README.md
PairwiseAlign/: CMakeLists.txt  aliDnaAffineLongGaps_ntm  aliDnaAffine_ntm  aliDnaLinear_ntm  aliProtAffine_ntm  alpha_beta.txt  alpha_zeta.txt  beta_zeta.txt  exemple_Hemoglobin  exemple_splicing
PairwiseAlign/src/: Makefile  README.md  aliCalcAE.c  aliCalcAE.h  aliCalcSW.c  aliCalcSW.h  aliCost.c  aliCost.h  aliDnaAffine.c  aliDnaAffineLongGaps.c  aliDnaLinear.c  aliGetSeq.c  aliGetSeq.h  aliOutAE.c  aliOutAE.h  aliOutSW.c  aliOutSW.h  aliProtAffine.c  printStrings.c
